# panini

./: .ghcid  .gitignore  Dockerfile  LICENSE  README.md  cabal.project  eval-10-inc4-80.txt  panini.cabal
app/: Main.hs
benchmarks/oopsla25/: README.md
examples/: abs.pan  abs2.pan  bar.pan  base.pan  cfg.pan  ex1.pan  ex1_bad1.pan  ex1_bad2.pan  ex1_bad3.pan  ex2.pan  ex3.pan  ex4_cfg.pan  ex4_cfg.py  ex5.pan  ex6.pan  f.pan  f1.pan  f2.pan  f3.pan  f4.pan  fac.pan  foo.pan  g1.con  if.pan  length.pan  local.pan  par.pan  substring.pan  sum.pan  test.pan  test.tex  test2.pan  test3.pan  trim.pan
panini-core/: panini-core.cabal
panini-lib/: panini-lib.cabal
panini-lib/src/Algebra/: Lattice.hs
panini-lib/src/Panini/: Diagnostic.hs  Elab.hs  Environment.hs  Infer.hs  Monad.hs  Parser.hs  Pretty.hs  Provenance.hs  Solver.hs  Version.hs
panini-lib/src/Panini/Abstract/: ABool.hs  AChar.hs  AInt.hs  AString.hs  AValue.hs  Interval.hs  Semantics.hs  normRelA.txt
panini-lib/src/Panini/Elab/: Definition.hs  Environment.hs  Error.hs  Module.hs
panini-lib/src/Panini/Pretty/: Symbols.hs
panini-lib/src/Panini/SMT/: Error.hs  Event.hs  SMTLIB.hs  Z3.hs
panini-lib/src/Panini/Solver/: Abstract.hs  Assignment.hs  Constraints.hs  Error.hs  Fusion.hs  Liquid.hs  Qualifiers.hs  Simplifier.hs
panini-lib/src/Panini/Syntax/: AST.hs  Expressions.hs  KVar.hs  Names.hs  Predicates.hs  Primitives.hs  QQ.hs  Relations.hs
panini-lib/src/Panini/Version/: Git.hs
panini-python/: panini-python.cabal
panini-python/src/Panini/Frontend/: Inliner.hs
panini-python/src/Panini/Frontend/Common/: SSA.hs
panini-python/src/Panini/Frontend/Python/: AST.hs  Axioms.hs  CFG.hs  DomTree.hs  Error.hs  Provenance.hs  Transpiler.hs
panini-python/src/Panini/Frontend/Python/Typing/: Builtins.hs  Infer.hs  Monad.hs  Pretty.hs  PyType.hs  Unify.hs
regex-algebra/: regex-algebra.cabal
regex-algebra/app/: FuzzingBook.hs  Main.hs  Options.hs
regex-algebra/benchmarks/: eval_simplify.hs
regex-algebra/benchmarks/data/MrE/expansions/: s7w3  s7w4  s8w1  s8w3
regex-algebra/benchmarks/data/MrE/populations/: s10w16  s10w2  s1280w16  s1280w2  s1280w3  s160w16  s20w16  s20w4  s2560w1  s320w2  s320w3  s40w1  s40w2  s40w4  s640w16  s640w2  s640w8  s80w2
regex-algebra/benchmarks/data/Panini/: regex_large.txt
regex-algebra/src/: Regex.hs
regex-algebra/src/Regex/: CharSet.hs  Inclusion.hs  Operations.hs  Type.hs
regex-algebra/src/Regex/POSIX/: BE.hs  ERE.hs
regex-algebra/src/Regex/Simplify/: Fuse.hs  Lookup.hs  Press.hs
src/: Panini.hs
src/Algebra/: Lattice.hs  Regex.hs
src/Panini/: Checker.hs  Diagnostics.hs  Elab.hs  Elaborator.hs  Environment.hs  Error.hs  Events.hs  Infer.hs  Logger.hs  Logic.hs  Modules.hs  Monad.hs  Names.hs  Panic.hs  Parser.hs  Pretty.hs  Primitives.hs  Printer.hs  Provenance.hs  REPL.hs  Regex.hs  SMT.hs  Solver.hs  Substitution.hs  Syntax.hs  TypeChecker.hs  Typer.hs  Version.hs
src/Regex/: CharSet.hs  Derivative.hs  Equivalence.hs  Operations.hs  Simplify.hs  Type.hs
tests/: 000_assert.out  000_assert.pan  000_unit.out  000_unit.pan  000_unit.pan.out  001_assert_false.out  001_bool.out  001_bool.pan  001_bool.pan.out  002_equals_1.pan  002_int.out  002_int.pan  002_int.pan.out  003_paper_example.pan  003_paper_example.py  003_string.pan  003_string.pan.out  004_example_v2.out  004_fun.out  004_fun.pan  004_fun.pan.out  005_assert.pan  005_assert.pan.out  005_example_sub.out  006_not.pan  006_not.pan.out  007_assert_not.out  007_assert_not.pan  007_assert_not.pan.out  007_simple_rec.out  008_empty_set.out  008_empty_set.pan  008_id_int.out  008_id_int.pan  008_id_int.pan.out  009_empty_set_sig.out  009_empty_set_sig.pan  010_empty_set_sig2.err  010_empty_set_sig2.pan  010_if.out  (+65 more)
tests/basic/: 000_prim.pan  000_prim.pan.out  001_fun_1.pan  001_fun_1.pan.out  002_fun_x.pan  002_fun_x.pan.out  003_assert_true.pan  003_assert_true.pan.out  004_assert_false.pan  004_assert_false.pan.out  005_fun_assert_true.pan  005_fun_assert_true.pan.out  006_fun_assert_false.pan  006_fun_assert_false.pan.out  007_fun_assert_x.pan  007_fun_assert_x.pan.out  008_not.pan  009_not_iff.pan  009_not_iff.pan.out  010_fun_not.pan  010_fun_not.pan.out  011_fun_not_iff.pan  011_fun_not_iff.pan.out  assert_false_01.pan  assert_false_01.pan.out  elab_hole_int.pan.out  fun_1_00.pan  fun_1_01.pan  fun_1_02.pan.out  fun_1_03.pan  fun_1_04.pan.out  fun_1_05.pan  fun_1_05.pan.out  fun_assert_false_00.pan.out  fun_assert_false_01.pan.out  fun_assert_false_03.pan  fun_assert_false_04.pan  fun_assert_false_07.pan  fun_assert_false_08.pan.out  fun_assert_false_09.pan.out  (+48 more)
tests/eval/: 000_ε.pan  001_ε.pan.out  011_Σ.pan.out  020_Σ+ε.pan  021_Σ+ε.pan  021_Σ+ε.pan.out  023_Σ+ε.pan  030_Σ∗.pan  030_Σ∗.pan.out  031_Σ∗.pan.out  032_Σ∗.pan  032_Σ∗.pan.out  040_ΣΣ.pan  040_ΣΣ.pan.out  041_ΣΣ.pan.out  042_ΣΣ.pan  050_ΣΣ∗.pan  052_ΣΣ∗.pan  052_ΣΣ∗.pan.out  060_ΣΣΣ.pan  061_ΣΣΣ.pan.out  062_ΣΣΣ.pan  063_ΣΣΣ.pan  063_ΣΣΣ.pan.out  070_ΣΣΣ∗.pan  070_ΣΣΣ∗.pan.out  071_ΣΣΣ∗.pan  071_ΣΣΣ∗.pan.out  072_ΣΣΣ∗.pan.out  080_a.pan  081_a.pan  082_a.pan  090_a+ε.pan  091_a+ε.pan  100_aa.pan  100_aa.pan.out  101_aa.pan.out  103_aa.pan  103_aa.pan.out  110_a∗.pan  (+118 more)
tests/eval_c/: 000.c  001.c  002.c  010.c  011.c  012.c  013.c  014.c  015.c  020.c  021.c  030.c  031.c  032.c  040.c  041.c  042.c  043.c  044.c  045.c  050.c  051.c  052.c  053.c  054.c  055.c  060.c  061.c  062.c  063.c  064.c  065.c  066.c  067.c  068.c  070.c  071.c  072.c  073.c  075.c  (+179 more)
tests/eval_py/: 000_E.py  001_E.py  002_E.py  002_E.py.out  010_X.py  011_X.py  011_X.py.out  012_X.py  012_single.py.out  013_X.py  013_X.py.out  014_X.py  014_single.py.out  015_X.py  015_X.py.out  020_XQ.py  021_XQ.py  021_XQ.py.out  030_XS.py  031_XS.py  032_all.py  032_all.py.out  033_XS.py  033_XS.py.out  040_any2.py  041_XX.py.out  041_two.py  042_XX.py  042_any2.py.out  043_XX.py  044_XX.py  044_XX.py.out  044_two.py  045_XX.py  045_XX.py.out  050_XXS.py  050_any_all.py.out  051_any_all.py  051_any_all.py.out  052_XXS.py  (+397 more)
tests/grammar/: 103_paper_example.pan  (+7 more)
(+2474 files in other folders)
