cabal-version:      3.4
name:               panini
version:            0.1
synopsis:           Grammar Inference for Ad Hoc Parsers
author:             Michael Schröder
maintainer:         michael.schroeder@tuwien.ac.at

library
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
  build-depends:
      base ^>=4.18
    , ansi-terminal
    , array
    , bytestring
    , containers
    , directory
    , extra
    , filepath
    , filepattern
    , githash
    , hashable
    , haskeline
    , language-python
    , megaparsec == 9.2.*
    , optparse-applicative >= 0.18.1
    , panini-core
    , parser-combinators
    , pretty
    , prettyprinter
    , process
    , regex-algebra
    , template-haskell
    , text
    , transformers
    , uniplate
    , unordered-containers
  exposed-modules:
    Panini.Abstract.ABool
    Panini.Abstract.AChar
    Panini.Abstract.AInt
    Panini.Abstract.AString
    Panini.Abstract.AUnit
    Panini.Abstract.AValue
    Panini.Abstract.Semantics
    Panini.CLI.Common
    Panini.CLI.Main    
    Panini.CLI.Options
    Panini.CLI.REPL
    Panini.CLI.Test
    Panini.Elab
    Panini.Environment
    Panini.Error
    Panini.Events
    Panini.Frontend.Common.Dom
    Panini.Frontend.Common.SSA
    Panini.Frontend.Inliner
    Panini.Frontend.Python
    Panini.Frontend.Python.AST
    Panini.Frontend.Python.Axioms
    Panini.Frontend.Python.CFG
    Panini.Frontend.Python.DomTree
    Panini.Frontend.Python.Error
    Panini.Frontend.Python.Pretty
    Panini.Frontend.Python.Provenance
    Panini.Frontend.Python.Strings
    Panini.Frontend.Python.Transpiler
    Panini.Frontend.Python.Typing.Builtins
    Panini.Frontend.Python.Typing.Infer
    Panini.Frontend.Python.Typing.Monad
    Panini.Frontend.Python.Typing.Pretty
    Panini.Frontend.Python.Typing.PyType
    Panini.Frontend.Python.Typing.TypeInfo
    Panini.Frontend.Python.Typing.Unify
    Panini.Infer
    Panini.Modules
    Panini.Monad
    Panini.Regex.SMT
    Panini.SMT.RegLan
    Panini.SMT.SMTLIB
    Panini.SMT.Z3
    Panini.Solver
    Panini.Solver.Abstract
    Panini.Solver.Assignment    
    Panini.Solver.Fusion
    Panini.Solver.Liquid
    Panini.Solver.Qualifiers
    Panini.Solver.Simplifier

executable panini
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts
  build-depends: 
      base
    , panini
