cabal-version:      3.4
name:               panini
version:            0.1
synopsis:           Grammar Inference for Ad Hoc Parsers
author:             Michael Schröder
maintainer:         michael.schroeder@tuwien.ac.at

library
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
  build-depends:
      base ^>=4.18
    , panini-core
    , panini-python
    , ansi-terminal
    , containers
    , directory
    , extra
    , filepath
    , filepattern
    , hashable
    , haskeline
    , language-python
    , optparse-applicative >= 0.18.1
    , prettyprinter
    , process
    , regex-algebra
    , text
    , transformers
    , uniplate
    , unordered-containers
  exposed-modules:
    Panini.Abstract.ABool
    Panini.Abstract.AChar
    Panini.Abstract.AInt
    Panini.Abstract.AString
    Panini.Abstract.AUnit
    Panini.Abstract.AValue
    Panini.Abstract.Semantics
    Panini.CLI.Common
    Panini.CLI.Main    
    Panini.CLI.Options
    Panini.CLI.REPL
    Panini.CLI.Test
    Panini.Elab
    Panini.Environment
    Panini.Error
    Panini.Events
    Panini.Frontend.Python
    Panini.Infer
    Panini.Modules
    Panini.Monad
    Panini.Regex.SMT
    Panini.SMT.RegLan
    Panini.SMT.SMTLIB
    Panini.SMT.Z3
    Panini.Solver
    Panini.Solver.Abstract
    Panini.Solver.Assignment    
    Panini.Solver.Fusion
    Panini.Solver.Liquid
    Panini.Solver.Qualifiers
    Panini.Solver.Simplifier

executable panini
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts
  build-depends: 
      base
    , panini
