cabal-version:      3.4
name:               panini
version:            0.1
synopsis:           Grammar Inference for Ad Hoc Parsers
author:             Michael Schröder
maintainer:         michael.schroeder@tuwien.ac.at

executable panini
  hs-source-dirs: app
  main-is: Main.hs
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  ghc-options:
    -threaded -rtsopts
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures    
  build-depends: 
      base ^>=4.18
    , panini-lib
    , panini-python
    , ansi-terminal
    , directory
    , extra
    , filepath
    , filepattern
    , haskeline
    , language-python
    , optparse-applicative >= 0.18.1
    , prettyprinter
    , terminal-size
    , text
    , transformers
  other-modules:
    Panini.CLI.Batch
    Panini.CLI.Common
    Panini.CLI.Error
    Panini.CLI.Options
    Panini.CLI.REPL
    Panini.CLI.Test
    Panini.Frontend.Python
