cabal-version:      3.4
name:               panini-lib
version:            0.1
--synopsis:
author:             Michael Schröder
maintainer:         michael.schroeder@tuwien.ac.at

library
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
  build-depends:
      base ^>=4.18
    , ansi-terminal
    , bytestring
    , containers
    , directory
    , extra
    , filepath
    , githash
    , hashable
    , megaparsec == 9.2.*
    , parser-combinators
    , prettyprinter
    , process
    , regex-algebra
    , template-haskell
    , text
    , transformers
    , uniplate
    , unordered-containers
  exposed-modules:
    Algebra.Lattice
    Panini.Abstract.ABool
    Panini.Abstract.AChar
    Panini.Abstract.AInt
    Panini.Abstract.AString
    Panini.Abstract.AUnit
    Panini.Abstract.AValue
    Panini.Abstract.Interval
    Panini.Abstract.Semantics
    Panini.Diagnostic
    Panini.Elab
    Panini.Elab.Definition
    Panini.Elab.Environment
    Panini.Elab.Error
    Panini.Elab.Module
    Panini.Infer
    Panini.Monad
    Panini.Panic
    Panini.Parser
    Panini.Pretty
    Panini.Pretty.Doc
    Panini.Pretty.Fixity
    Panini.Pretty.Graphviz
    Panini.Pretty.Render
    Panini.Pretty.Style
    Panini.Pretty.Symbols
    Panini.Provenance
    Panini.Regex.SMT
    Panini.SMT.Error
    Panini.SMT.RegLan
    Panini.SMT.SMTLIB
    Panini.SMT.Z3
    Panini.Solver
    Panini.Solver.Abstract
    Panini.Solver.Assignment    
    Panini.Solver.Constraints
    Panini.Solver.Error
    Panini.Solver.Fusion
    Panini.Solver.Liquid
    Panini.Solver.Qualifiers
    Panini.Solver.Simplifier
    Panini.Syntax
    Panini.Syntax.AST
    Panini.Syntax.Expressions
    Panini.Syntax.KVar
    Panini.Syntax.Names
    Panini.Syntax.Predicates
    Panini.Syntax.Primitives
    Panini.Syntax.QQ
    Panini.Syntax.Relations
    Panini.Syntax.Substitution
    Panini.Version
