cabal-version:      3.4
name:               panini-python
version:            0.1
--synopsis:
author:             Michael Schröder
maintainer:         michael.schroeder@tuwien.ac.at

library
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
  build-depends:
      base ^>=4.18
    , array
    , containers
    , extra
    , language-python
    , panini-core
    , pretty
    , prettyprinter
    , text
    , transformers
    , uniplate
  exposed-modules:    
    Panini.Frontend.Common.Dom
    Panini.Frontend.Common.SSA
    Panini.Frontend.Inliner    
    Panini.Frontend.Python.AST
    Panini.Frontend.Python.Axioms
    Panini.Frontend.Python.CFG
    Panini.Frontend.Python.DomTree
    Panini.Frontend.Python.Error
    Panini.Frontend.Python.Pretty
    Panini.Frontend.Python.Provenance
    Panini.Frontend.Python.Strings
    Panini.Frontend.Python.Transpiler
    Panini.Frontend.Python.Typing.Builtins
    Panini.Frontend.Python.Typing.Infer
    Panini.Frontend.Python.Typing.Monad
    Panini.Frontend.Python.Typing.Pretty
    Panini.Frontend.Python.Typing.PyType
    Panini.Frontend.Python.Typing.TypeInfo
    Panini.Frontend.Python.Typing.Unify
